카카오 로그인 1차 테스트

--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
         <h2>소셜로그인 test</h2>
         <div class="social_box">
             <div class="social_btn">
-                <img src="img/kakao_social.png" alt="">
+                <a href="javascript:kakaoLogin();">
+                    <img src="img/kakao_social.png" alt="">
+                </a>
             </div>
             <div class="social_btn">
-                <img src="img/kakao_social.png" alt="">
+                <a href="">
+                    <img src="img/kakao_social.png" alt="">
+                </a>
             </div>
             <div class="social_btn">
-                <img src="img/kakao_social.png" alt="">
+                <a href="">
+                    <img src="img/kakao_social.png" alt="">
+                </a>
             </div>
         </div>
     </section>
@@ -29,5 +35,7 @@
         footer 구간
     </footer>
     <script src="js/main.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script src="js/kakao.js"></script>
 </body>
 </html>
