카카오 로그인 3차 테스트

--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>first_profect</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-    <header>
-        <h1>Kimsiyun's first portfoilo</h1>
-    </header>
-    
-    <section class="social_section">
-        <h2>소셜로그인 test</h2>
-        <div class="social_box">
-            <div class="social_btn">
-                <a href="javascript:kakaoLogin();">
-                    <img src="img/kakao_social.png" alt="">
-                </a>
-            </div>
-            <div class="social_btn">
-                <a href="">
-                    <img src="img/kakao_social.png" alt="">
-                </a>
-            </div>
-            <div class="social_btn">
-                <a href="">
-                    <img src="img/kakao_social.png" alt="">
-                </a>
-            </div>
-        </div>
-    </section>
 
-    <footer>
-        footer 구간
-    </footer>
-    <script src="js/main.js"></script>
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script src="js/kakao.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <title>first_profect</title>
+  <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+  <header>
+    <h1>Kimsiyun's first portfoilo</h1>
+  </header>
+
+  <section class="social_section">
+    <h2>소셜로그인 test</h2>
+    <div class="social_box">
+      <div class="social_btn">
+        <a href="javascript:kakaoLogin();">
+          <img src="img/kakao_social.png" alt="">
+        </a>
+      </div>
+      <div class="social_btn">
+        <a href="javascript:test();">
+          <img src="img/kakao_social.png" alt="">
+        </a>
+      </div>
+      <div class="social_btn">
+        <a href="javascript:kakaoLogout();">
+          <img src="img/kakao_social.png" alt="">
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    footer 구간
+  </footer>
+  <script src="js/main.js"></script>
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <script src="js/kakao.js"></script>
 </body>
+
 </html>
