카카오 로그인 4차 테스트

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
       </div>
       <div class="social_btn">
-        <a href="javascript:test();">
+        <a href="javascript:kakaoLogin();">
           <img src="img/kakao_social.png" alt="">
         </a>
       </div>
@@ -31,6 +31,7 @@
         </a>
       </div>
     </div>
+    <p class="guide_msg">카카오 로그인 기능 테스트중입니다. 나쁜곳에 이용되지 않습니다^^<br>3번째 사진 누르시면 로그아웃 됩니다.</p>
   </section>
 
   <footer>
